# poc-rz-smart-power-controller

./: README.md
source/: build_deb.sh
source/src/: CMakeLists.txt  LICENSE.md  README.md  SYSTEMD.md  gpio_api_c.py  gpio_config.json  gpio_config_tool.py  gpio_setup.sh  gpio_terminal.sh  rz-smart-power-controller.service
source/src/debian/: control  postinst  prerm
source/src/templates/: index.html
src/: CMakeLists.txt  README.md  gpio_api_c.py  gpio_config.json  gpio_setup.sh  gpio_terminal.sh
src/debian/: control
src/templates/: index.html
